--- a/src/chromemanifest.json
+++ b/src/chromemanifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Unicodify DEV VERSION",
   "short_name": "__MSG_extensionNameShort__",
-  "version": "1.0",
+  "version": "2.0",
   "author": "Teal Dulcet, rugk",
 
   "description": "__MSG_extensionDescription__",
@@ -10,7 +10,8 @@
 
   "options_ui": {
     "page": "options/options.html",
-    "browser_style": true
+    "browser_style": true,
+    "chrome_style": true
   },
 
   "background": {
@@ -20,7 +21,10 @@
     {
       "matches": ["<all_urls>"],
       "all_frames": true,
-      "js": ["content_scripts/autocorrect.js"]
+      "js": [
+        "browser-polyfill.js",
+        "content_scripts/autocorrect.js"
+      ]
     }
   ],
 
@@ -37,14 +41,7 @@
   "permissions": [
     "storage",
     "activeTab",
-    "contextMenus",
-    "tabs"
-  ],
-
-  "applications": {
-    "gecko": {
-      "id": "unicodify@rugk.github.io",
-      "strict_min_version": "78.0"
-    }
-  }
+    "tabs",
+    "contextMenus"
+  ]
 }
