--- a/src/thunderbirdmanifest.json
+++ b/src/thunderbirdmanifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Unicodify DEV VERSION",
+  "name": "__MSG_extensionName__",
   "short_name": "__MSG_extensionNameShort__",
   "version": "1.0",
   "author": "Teal Dulcet, rugk",
@@ -20,12 +20,12 @@
     {
       "matches": ["<all_urls>"],
       "all_frames": true,
+      "match_about_blank": true,
       "js": ["content_scripts/autocorrect.js"]
     }
   ],
 
-  // testing version allows loading unit test libraries from CDNs
-  "content_security_policy": "default-src 'self'; img-src data:; style-src 'self' https://unpkg.com; script-src 'self' https://unpkg.com",
+  "content_security_policy": "default-src 'self'",
   "icons": {
     "16": "icons/icon-small-colored.svg",
     "32": "icons/icon-small-colored.svg",
@@ -37,8 +37,9 @@
   "permissions": [
     "storage",
     "activeTab",
-    "contextMenus",
-    "tabs"
+    "tabs",
+    "compose",
+    "menus"
   ],
 
   "applications": {
