--- a/scripts/manifests/chromemanifest.json
+++ b/scripts/manifests/chromemanifest.json
@@ -34,7 +34,8 @@
     "16": "icons/icon_16.png",
     "32": "icons/icon_32.png",
     "48": "icons/icon_48.png",
-    "96": "icons/icon_96.png"
+    "96": "icons/icon_96.png",
+    "128": "icons/icon.svg"
   },
   "default_locale": "en",
 
