Added live preview support for Chrome.

--- a/scripts/manifests/chromemanifest.json
+++ b/scripts/manifests/chromemanifest.json
@@ -23,6 +23,7 @@
       "all_frames": true,
       "js": [
         "browser-polyfill.js",
+        "content_scripts/chrome.js",
         "content_scripts/autocorrect.js"
       ]
     }
