Added Thunderbird workaround.

--- a/scripts/manifests/thunderbirdmanifest.json
+++ b/scripts/manifests/thunderbirdmanifest.json
@@ -39,7 +39,9 @@
     "<all_urls>",
     "tabs",
     "compose",
-    "menus"
+    "menus",
+    "notifications",
+    "clipboardWrite"
   ],
 
   "applications": {
