--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "es2021",
+    "module": "es2021",
+    "checkJs": true,
+    "strict": true,
+    "noImplicitAny": false,
+    "forceConsistentCasingInFileNames": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "baseUrl": "./src",
     "paths": {
       "/*": ["./*"],
