--- a/scripts/manifests/thunderbirdmanifest.json
+++ b/scripts/manifests/thunderbirdmanifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
   "short_name": "__MSG_extensionNameShort__",
-  "version": "0.5.2",
+  "version": "0.6",
   "author": "Teal Dulcet, rugk",
 
   "description": "__MSG_extensionDescription__",
@@ -44,7 +44,7 @@
     "clipboardWrite"
   ],
 
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "unicodify@rugk.github.io",
       "strict_min_version": "91.0"
