Cleaned up code and restored Chrome MV2 support.

--- a/scripts/manifests/chromemanifest.json
+++ b/scripts/manifests/chromemanifest.json
@@ -13,8 +13,7 @@
   },
 
   "background": {
-    "scripts": ["browser-polyfill.js", "background/modules/InstallUpgrade.js", "background/background.js"],
-    "type": "module"
+    "page": "background.html"
   },
   "content_scripts": [
     {
